--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@
 permalink:           pretty
 
 # Setup
-title:               IntermediateRuby
-tagline:             "Grow as a software developer! Make more 💰💰💰"
+title:               intermediate_ruby
+tagline:             "Deliver More Value"
 title_image:         "/images/site_base_image.jpg"
 url:                 https://intermediateruby.com/
 baseurl:             ""
