--- a/_config.yml
+++ b/_config.yml
@@ -29,12 +29,13 @@ future: true
 twitter_username:   "josh_works"
 
 # pages in nav bar
-include: ['_pages']
+include: ['_pages', '_posts']
 
 # pages across header
 # seems to need `jekyll build` to catch updates on localhost
 pages_list:
   about: '/about'
+  articles: '/articles'
 
 # Assets
 # We specify the directory for Jekyll so we can use @imports.
